--- a/microblogging/src/Styles/CreateTweet.css
+++ b/microblogging/src/Styles/CreateTweet.css
@@ -61,7 +61,6 @@
   .createTweetBottom {
     display: flex;
     flex-direction: row;
-    border: 1px white solid;
   }
   
   .over140CharsAlert {
@@ -73,5 +72,32 @@
     border: 1px solid #f5c6cb;
     border-radius: 4px;
     padding: 7px 4px;
+  }
+
+  .spinner {
+    border: 2px solid #cccccc;
+    border-radius: 50%;
+    border-top-color: #007bff;
+    opacity: 0;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    margin: auto;
+    width: 16px;
+    height: 16px;
+    transition: opacity 250ms;
+    animation: rotate-spinner 1s linear;
+    animation-iteration-count: infinite;
+  }
+
+  .spinner {
+    opacity: 1;
+    transition-delay: 250ms;
+  }
+  
+  @keyframes rotate-spinner {
+    100% {
+      transform: rotate(360deg);
+    }
   }
   
