--- a/microblogging/src/Styles/CreateTweet.css
+++ b/microblogging/src/Styles/CreateTweet.css
@@ -1,103 +1,66 @@
 .CreateTweet {
-    position: relative;
-    height: 180px;
-    margin-bottom: 5px;
-  }
-  
-  textarea {
-    width: 100%;
-    height: 100%;
-    border: 2px #cccccc solid;
-    border-radius: 6px;
-    background-color: transparent;
-    color: #cccccc;
-    line-height: 19px;
-    padding: 20px 16px;
-    resize: none;
-    font-weight: 400;
-  }
-  
-  textarea:focus {
-    outline: none;
-  }
-  
-  .createTweetButton button {
-    position: absolute;
-    bottom: 20px;
-    right: 10px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    padding: 2px 7px;
-    line-height: 19px;
-    width: 68px;
-    height: 34px;
-  }
-  
-  .createTweetButton button:hover {
-    cursor: pointer;
-    background-color: #007bff;
-    box-shadow: 0 0 10px #007bff;
-  }
-  
-  .createTweetButtonDisabled button {
-    position: absolute;
-    bottom: 20px;
-    right: 10px;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    padding: 2px 7px;
-    line-height: 19px;
-    width: 68px;
-    height: 34px;
-    opacity: 0.5;
-  }
-  
-  .createTweetBottom {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .over140CharsAlert {
-    position: absolute;
-    bottom: 20px;
-    left: 10px;
-    color: #721c24;
-    background-color: #f8d7da;
-    border: 1px solid #f5c6cb;
-    border-radius: 4px;
-    padding: 7px 4px;
-  }
+  position: relative;
+  height: 180px;
+  margin-bottom: 5px;
+}
 
-  .spinner {
-    border: 2px solid #cccccc;
-    border-radius: 50%;
-    border-top-color: #007bff;
-    opacity: 0;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    margin: auto;
-    width: 16px;
-    height: 16px;
-    transition: opacity 250ms;
-    animation: rotate-spinner 1s linear;
-    animation-iteration-count: infinite;
-  }
+textarea {
+  width: 100%;
+  height: 100%;
+  border: 2px #cccccc solid;
+  border-radius: 6px;
+  background-color: transparent;
+  color: #cccccc;
+  line-height: 19px;
+  padding: 20px 16px;
+  resize: none;
+  font-weight: 400;
+}
 
-  .spinner {
-    opacity: 1;
-    transition-delay: 250ms;
+textarea:focus {
+  outline: none;
+}
+
+.tweetButton {
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+}
+
+.over140CharsAlert {
+  position: absolute;
+  left: 10px;
+  bottom: 20px;
+  color: #721c24;
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  border-radius: 4px;
+  padding: 7px 4px;
+}
+
+.spinner {
+  border: 2px solid #cccccc;
+  border-radius: 50%;
+  border-top-color: #007bff;
+  opacity: 0;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  margin: auto;
+  width: 16px;
+  height: 16px;
+  transition: opacity 250ms;
+  animation: rotate-spinner 1s linear;
+  animation-iteration-count: infinite;
+}
+
+.spinner {
+  opacity: 1;
+  transition-delay: 250ms;
+}
+
+@keyframes rotate-spinner {
+  100% {
+    transform: rotate(360deg);
   }
-  
-  @keyframes rotate-spinner {
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
+}
