--- a/microblogging/src/Styles/Profile.css
+++ b/microblogging/src/Styles/Profile.css
@@ -17,5 +17,12 @@ button {
   border: none;
   border-radius: 50px;
   width: 100px;
-  margin-right: 5px;
+  height: 100px;
+  margin: 5px 20px 20px 5px;
+}
+
+.profile-details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
